<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.signup.Inscription3Fragment"
    android:background="@color/light_purple" >

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/logo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_gravity="center"
        android:contentDescription="@string/logo_alt"
        android:src="@drawable/logo" />
    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sora"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="34sp"
        android:layout_gravity="center" />

    <TextView
        android:id="@+id/selectGames"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/sora"
        android:text="@string/select_games"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_team_game"
        android:textColor="@color/white"
        android:textSize="20dp"/>
    <Spinner
        android:id="@+id/team_game"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:popupBackground="@color/medium_purple"
        android:spinnerMode="dropdown"
        android:dropDownWidth="match_parent" />

    <TextView
        android:id="@+id/description2"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_gravity="center"
        android:fontFamily="@font/saira_semi_condensed_regular"
        android:text="@string/your_games"
        android:textColor="@color/white"
        android:textSize="26sp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center" />
    <Button
        android:id="@+id/inscription_end"
        android:layout_width="300dp"
        android:layout_height="44dp"
        android:layout_marginTop="8dp"
        android:layout_gravity="center"
        android:text="@string/finish"
        android:backgroundTint="@color/light_orange"
        android:onClick="goSignUp"/>
</LinearLayout>
</FrameLayout>