<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TeamCreate2Fragment"
    android:background="@color/light_purple">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/parent"
        android:paddingHorizontal="15dp"
        android:paddingVertical="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_annonce"
            android:textSize="20dp"
            android:textColor="@color/white"/>

        <EditText
            android:id="@+id/annonce_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/create_annonce_title_placeholder"
            android:inputType="text"
            android:textColorHint="@color/white"
            android:backgroundTint="@color/white"/>

        <EditText
            android:id="@+id/annonce_body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/create_annonce_body_placeholder"
            android:textColorHint="@color/white"
            android:backgroundTint="@color/white"/>

        <Button
            android:id="@+id/next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:backgroundTint="@color/medium_purple"
            android:text="@string/finish"
            android:textColor="@color/white"
            android:textSize="16dp"
            android:paddingHorizontal="80dp"
            android:paddingVertical="10dp"
            android:layout_marginBottom="42dp"
            android:onClick="createTeam"
            android:tag="2" />
    </LinearLayout>
</FrameLayout>