<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.team.TeamCreate1Fragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/parent"
        android:paddingHorizontal="15dp"
        android:paddingVertical="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center" >

            <ImageButton
                android:id="@+id/team_logo"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_baseline_add_a_photo_24"
                android:background="@drawable/round_button_white_borders"
                android:layout_marginEnd="8dp"/>

            <EditText
                android:id="@+id/team_name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/create_team_name"
                android:textSize="20dp"
                android:inputType="text"
                android:background="@drawable/bottom_border_white"
                android:textColorHint="@color/white"/>

        </LinearLayout>

        <EditText
            android:id="@+id/team_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:hint="@string/description_placeholder"
            android:textSize="20dp"
            android:textColorHint="@color/white"
            android:backgroundTint="@color/white"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/create_team_game"
                android:textColor="@color/white"
                android:textSize="20dp"/>
            <Spinner
                android:id="@+id/team_game"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:popupBackground="@color/medium_purple"
                android:spinnerMode="dropdown"
                android:dropDownWidth="match_parent" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/create_team_members"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:layout_marginTop="16dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <EditText
                    android:id="@+id/team_member"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="100"
                    android:inputType="text"
                    android:hint="@string/create_team_members_placeholder"
                    android:backgroundTint="@color/white"
                    android:textColorHint="@color/white" />
                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_weight="50"
                    android:text="Ajouter"
                    android:onClick="addMates"/>
            </LinearLayout>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/added_mates"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <Button
            android:id="@+id/next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:backgroundTint="@color/medium_purple"
            android:text="@string/next"
            android:textColor="@color/white"
            android:textSize="16dp"
            android:paddingHorizontal="80dp"
            android:paddingVertical="10dp"
            android:layout_marginTop="18dp"
            android:onClick="goNext" />
    </LinearLayout>
</FrameLayout>