<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.profile.ProfileEditActivity"
    android:background="@color/light_purple">

    <LinearLayout
        android:id="@+id/home_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="end"
        android:paddingHorizontal="15dp"
        android:paddingVertical="10dp"
        android:background="@color/medium_purple">

        <ImageButton
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_baseline_notifications_24"
            android:background="@drawable/round_button_white_borders" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/home_header"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:paddingHorizontal="15dp"
        android:paddingVertical="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Modification"
            android:textColor="@color/white"
            android:textSize="26dp"
            android:layout_marginBottom="12dp"/>

        <ImageView
            android:id="@+id/profile_picture"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/ic_baseline_face_24"
            android:adjustViewBounds="true"
            android:background="@drawable/round_button_white_borders" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_placeholder"
                android:textSize="18dp"
                android:textColor="@color/white"/>
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_baseline_create_24"
                android:layout_marginLeft="2dp"/>
        </LinearLayout>
        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/name_placeholder"
            android:textSize="16dp"
            android:textColor="@color/white"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/white"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description_placeholder"
                android:textSize="18dp"
                android:textColor="@color/white"/>
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_baseline_create_24"
                android:layout_marginLeft="2dp"/>
        </LinearLayout>
        <EditText
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="description"
            android:textSize="16dp"
            android:textColor="@color/white"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/white"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/your_games"
            android:textSize="18dp"
            android:textColor="@color/white"
            android:layout_marginBottom="10dp"/>
        <EditText
            android:id="@+id/game"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/select_game_placeholder"
            android:textSize="16dp"
            android:textColor="@color/white"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/user_edit_games_recycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit"
            android:backgroundTint="@color/medium_purple"
            android:textColor="@color/white"
            android:onClick="editProfile"/>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>